--- a/views/index.html
+++ b/views/index.html
@@ -162,7 +162,7 @@
     <div class="cta-content">
       <div class="container">
         <h2>Stop thinking.<br>Start calling.</h2>
-        <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
+        <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
       </div>
     </div>
     <div class="overlay"></div>
@@ -195,7 +195,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; Your Website 2019. All Rights Reserved.</p>
+      <p>&copy; EffiCall 2019. All Rights Reserved.</p>
       <ul class="list-inline">
         <li class="list-inline-item">
           <a href="#">Privacy</a>
