--- a/views/index.html
+++ b/views/index.html
@@ -19,6 +19,8 @@
   <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 
+  <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet">
+
   <!-- Plugin CSS -->
 
   <!-- Custom styles for this template -->
@@ -170,29 +172,41 @@
 
   <section class="contact bg-primary" id="contact">
     <div class="container">
-      <h2>We
-        <i class="fas fa-heart"></i>
-        new friends!</h2>
-      <ul class="list-inline list-social">
-        <li class="list-inline-item social-twitter">
-          <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a>
-        </li>
-        <li class="list-inline-item social-facebook">
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-        </li>
-        <li class="list-inline-item social-google-plus">
-          <a href="#">
-            <i class="fab fa-google-plus-g"></i>
-          </a>
-        </li>
-      </ul>
+      <h2>Meet 
+        <!-- <i class="fas fa-heart"></i> -->
+        The Team!</h2>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4" style="font-family: 'Source Serif Pro', serif; font-size: 21px">
+            <!-- <img src="./views/img/rohan.jpeg" class="img-circle" style= "border-radius: 50%; max-height: 50%; max-width: 100%"></br> -->
+            <img src="./views/img/logo.png" class="rounded" alt="Cinque Terre"></br>  
+            Rohan Menon
+            </div>
+            <div class="col-lg-4" style="font-family: 'Source Serif Pro', serif; font-size: 21px">
+            <img src="./views/img/logo.png" class="rounded" alt="Cinque Terre"></br>
+              Hem Shah
+            </div>
+            <div class="col-lg-4" style="font-family: 'Source Serif Pro', serif; font-size: 21px">
+            <img src="./views/img/logo.png" class="rounded" alt="Cinque Terre"></br>
+              Harshvardhan Dudeja
+            </div>
+            <div class="col-lg-2">
+            </div>
+            <div class="col-lg-4" style="font-family: 'Source Serif Pro', serif; font-size: 21px">
+            <img src="./views/img/logo.png" class="rounded" alt="Cinque Terre"></br>  
+              Siddarth Choudhary
+            </div>
+            <div class="col-lg-4" style="font-family: 'Source Serif Pro', serif; font-size: 21px">
+            <img src="./views/img/logo.png" class="rounded" alt="Cinque Terre"></br>
+              Shrikant Sherkar
+            </div>
+          </div>
+        </div>
     </div>
   </section>
 
+
+  
   <footer>
     <div class="container">
       <p>&copy; EffiCall 2019. All Rights Reserved.</p>
