--- a/views/index.html
+++ b/views/index.html
@@ -47,7 +47,7 @@
             <a class="nav-link js-scroll-trigger" href="#features">Features</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Meet the team</a>
           </li>
         </ul>
       </div>
