--- a/views/index.html
+++ b/views/index.html
@@ -168,7 +168,46 @@
     <div class="overlay"></div>
   </section>
 
-  <section class="contact bg-primary" id="contact">
+  <section class="features bg-primary" id="features">
+    <div class="container">
+      <div class="section-heading text-center">
+        <h2>How does it work?</h2>
+        <hr>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 my-auto">
+          <div class="device-container">
+            <div class="device-mockup iphone6_plus portrait white">
+              <div class="device">
+                <div class="screen">
+                  <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
+                  <img src="/views/img/demo-screen-1.jpg" class="img-fluid" alt="">
+                </div>
+                <div class="button">
+                  <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-8 my-auto">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="feature-item">
+                  <i class="icon-screen-smartphone text-primary"></i>
+                  <h3>Value for money</h3>
+                  <p class="text-muted">Get the best quality connection at the cheapest rate !</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="contact" id="contact">
     <div class="container">
       <h2>We
         <i class="fas fa-heart"></i>
