--- a/views/index.html
+++ b/views/index.html
@@ -226,7 +226,7 @@
               Hem Shah
             </div>
             <div class="col-lg-4" style="font-family: 'Source Serif Pro', serif; font-size: 21px">
-            <img src="./views/img/logo.png" class="rounded" alt="Cinque Terre"></br>
+            <img src="./views/img/harsh2.jpg" style = "border-radius: 50%; margin-bottom: 4%" alt="Avatar" style="width:200px" alt="Cinque Terre"></br>
               Harshvardhan Dudeja
             </div>
             <div class="col-lg-2">
