Meet the team: Complete

--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 
-  <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
 
   <!-- Plugin CSS -->
 
@@ -214,29 +214,30 @@
       <h2>Meet 
         <!-- <i class="fas fa-heart"></i> -->
         The Team!</h2>
+        <br><br>
         <div class="container">
           <div class="row">
-            <div class="col-lg-4" style="font-family: 'Source Serif Pro', serif; font-size: 21px">
+            <div class="col-lg-4" style="font-family: 'Cinzel', serif; font-size: 29px">
             <!-- <img src="./views/img/rohan.jpeg" class="img-circle" style= "border-radius: 50%; max-height: 50%; max-width: 100%"></br> -->
-            <img src="./views/img/logo.png" class="rounded" alt="Cinque Terre"></br>  
+            <img src="./views/img/rohan2.jpg" style = "border-radius: 50%; margin-bottom: 4%" alt="Avatar" style="width:200px" alt="Cinque Terre"></br>  
             Rohan Menon
             </div>
-            <div class="col-lg-4" style="font-family: 'Source Serif Pro', serif; font-size: 21px">
-            <img src="./views/img/logo.png" class="rounded" alt="Cinque Terre"></br>
+            <div class="col-lg-4" style="font-family: 'Cinzel', serif; font-size: 29px">
+            <img src="./views/img/hem.jpg" style = "border-radius: 50%; margin-bottom: 4%" alt="Avatar" style="width:200px" alt="Cinque Terre"></br>
               Hem Shah
             </div>
-            <div class="col-lg-4" style="font-family: 'Source Serif Pro', serif; font-size: 21px">
+            <div class="col-lg-4" style="font-family: 'Cinzel', serif; font-size: 29px">
             <img src="./views/img/harsh2.jpg" style = "border-radius: 50%; margin-bottom: 4%" alt="Avatar" style="width:200px" alt="Cinque Terre"></br>
               Harshvardhan Dudeja
             </div>
             <div class="col-lg-2">
             </div>
-            <div class="col-lg-4" style="font-family: 'Source Serif Pro', serif; font-size: 21px">
-            <img src="./views/img/logo.png" class="rounded" alt="Cinque Terre"></br>  
+            <div class="col-lg-4" style="font-family: 'Cinzel', serif; font-size: 29px">
+            <img src="./views/img/siddarth2.jpg" style = "border-radius: 50%; margin-bottom: 4%" alt="Avatar" style="width:200px" alt="Cinque Terre"></br>  
               Siddarth Choudhary
             </div>
-            <div class="col-lg-4" style="font-family: 'Source Serif Pro', serif; font-size: 21px">
-            <img src="./views/img/logo.png" class="rounded" alt="Cinque Terre"></br>
+            <div class="col-lg-4" style="font-family: 'Cinzel', serif; font-size: 29px">
+            <img src="./views/img/0.jpg" style = "border-radius: 50%; margin-bottom: 4%; height: 200px" alt="Avatar"></br>
               Shrikant Sherkar
             </div>
           </div>
