--- a/views/index.html
+++ b/views/index.html
@@ -170,27 +170,23 @@
     <div class="overlay"></div>
   </section>
 
-  <section class="features bg-primary" id="features">
+  <section class="features" id="features">
     <div class="container">
       <div class="section-heading text-center">
         <h2>How does it work?</h2>
         <hr>
       </div>
       <div class="row">
-        <div class="col-lg-4 my-auto">
+        <div class="col-lg-12 my-auto">
           <div class="device-container">
-            <div class="device-mockup iphone6_plus portrait white">
-              <div class="device">
                 <div class="screen">
                   <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                  <img src="/views/img/demo-screen-1.jpg" class="img-fluid" alt="">
+                  <img style="margin-left: -134%" src="/views/img/flow.png" alt="">
                 </div>
                 <div class="button">
                   <!-- You can hook the "home button" to some JavaScript events or just remove it -->
                 </div>
               </div>
-            </div>
-          </div>
         </div>
       </div>
     </div>
