--- a/views/index.html
+++ b/views/index.html
@@ -47,6 +47,9 @@
             <a class="nav-link js-scroll-trigger" href="#features">Features</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#working">How does it work</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Meet the team</a>
           </li>
         </ul>
@@ -170,7 +173,7 @@
     <div class="overlay"></div>
   </section>
 
-  <section class="features" id="features">
+  <section class="features bg-primary" id="working">
     <div class="container">
       <div class="section-heading text-center">
         <h2>How does it work?</h2>
@@ -181,7 +184,7 @@
           <div class="device-container">
                 <div class="screen">
                   <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                  <img style="margin-left: -134%" src="/views/img/flow.png" alt="">
+                  <img style="margin-left: -110%; width:330%;" src="/views/img/flow.png"  alt="">
                 </div>
                 <div class="button">
                   <!-- You can hook the "home button" to some JavaScript events or just remove it -->
