--- a/views/index.html
+++ b/views/index.html
@@ -184,15 +184,17 @@
           <div class="device-container">
                 <div class="screen">
                   <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                  <img style="margin-left: -110%; width:330%;" src="/views/img/flow.png"  alt="">
+                  <img style="margin-left: -110%; width:330%;" src="/views/img/flow.png"  alt="" usemap="#planetmap">
+                  <map name="planetmap">
+                      <area shape="rect" coords="300,100,450,400" alt="Sun" href="">
+                      <area shape="rect" coords="550,100,700,400" alt="Sun" href="">
+                    </map>
                 </div>
-                <div class="button">
-                  <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-                </div>
+               
               </div>
         </div>
       </div>
-    </div>
+     
   </section>
 
   <section class="contact" id="contact">
