--- a/views/index.html
+++ b/views/index.html
@@ -186,15 +186,52 @@
                   <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
                   <img style="margin-left: -110%; width:330%;" src="/views/img/flow.png"  alt="" usemap="#planetmap">
                   <map name="planetmap">
-                      <area shape="rect" coords="300,100,450,400" alt="Sun" href="">
-                      <area shape="rect" coords="550,100,700,400" alt="Sun" href="">
+                      <area shape="rect" coords="300,100,450,400" alt="Sun" href="" data-toggle="modal" data-target="#optimize">
+                      <area shape="rect" coords="550,100,700,400" alt="Sun" href="" data-toggle="modal" data-target="#summerise">
                     </map>
                 </div>
                
               </div>
         </div>
       </div>
-     
+      <div class="modal fade" tabindex="-1" role="dialog" id="optimize">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <p>Modal body text goes here.</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal fade" tabindex="-1" role="dialog" id="summerise">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">Modal title</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <p>Modal body text goes here.</p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
   </section>
 
   <section class="contact" id="contact">
