How does it work

--- a/views/index.html
+++ b/views/index.html
@@ -62,7 +62,7 @@
       <div class="row h-100">
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">EffiCall is an app which helps you determine which connection type is best to use for the highest quality phone call at the lowest cost!</h1>
+            <h1 class="mb-5">EffiCall is a call app which helps you optimize, summarise and contextualize your phone calls!</h1>
             <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
           </div>
         </div>
@@ -257,9 +257,9 @@
             </div>
             <div class="col-lg-2">
             </div>
-            <div class="col-lg-4" style="font-family: 'Cinzel', serif; font-size: 29px">
+            <div class="col-lg-4" style="font-family: 'Cinzel', serif; font-size: 27px">
             <img src="./views/img/siddarth2.jpg" style = "border-radius: 50%; margin-bottom: 4%" alt="Avatar" style="width:200px" alt="Cinque Terre"></br>  
-              Siddarth Choudhary
+              Siddharth Choudhary
             </div>
             <div class="col-lg-4" style="font-family: 'Cinzel', serif; font-size: 29px">
             <img src="./views/img/0.jpg" style = "border-radius: 50%; margin-bottom: 4%; height: 200px" alt="Avatar"></br>
