--- a/views/index.html
+++ b/views/index.html
@@ -62,7 +62,7 @@
       <div class="row h-100">
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">EffiCall is a call app which helps you optimize, summarise and contextualize your phone calls!</h1>
+            <h1 class="mb-5"><span style="font-family: 'Cinzel', serif;">EffiCall</span> is a call app which helps you optimize, summarise and contextualize your phone calls!</h1>
             <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
           </div>
         </div>
