--- a/views/index.html
+++ b/views/index.html
@@ -170,7 +170,7 @@
     <div class="overlay"></div>
   </section>
 
-  <section class="features" id="features">
+  <section class="features" style="background-image: linear-gradient(to left, #7b4397, #dc2430)" id="features">
     <div class="container">
       <div class="section-heading text-center">
         <h2>How does it work?</h2>
