--- a/views/index.html
+++ b/views/index.html
@@ -194,6 +194,7 @@
               </div>
         </div>
       </div>
+
       <div class="modal fade" tabindex="-1" role="dialog" id="optimize">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -213,25 +214,45 @@
             </div>
           </div>
         </div>
+
         <div class="modal fade" tabindex="-1" role="dialog" id="summerise">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title">Modal title</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
+                    <nav>
+                        <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                          <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Text</a>
+                          <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">File</a>
+                        </div>
+                      </nav>
                 </div>
                 <div class="modal-body">
-                  <p>Modal body text goes here.</p>
+                    <div class="tab-content" id="nav-tabContent">
+                        <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+                          <h4>Text Upload:</h4>
+                            <form>
+                                <textarea class="form-control" id="text_summary" rows="3"></textarea>
+                                <br/>
+                                <button type="submit" class="btn btn-primary mb-2">Submit</button>
+                            </form>
+                        </div>
+                        <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+                            <h4>Audio File Upload:</h4>
+                            <form>
+                                <input type="file" class="form-control-file" id="file_upload">
+                                <br/>
+                                <button type="submit" class="btn btn-primary mb-2">Submit</button>
+                            </form>
+                        </div>
+                      </div>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-primary">Save changes</button>
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
               </div>
             </div>
           </div>
+          
   </section>
 
   <section class="contact" id="contact">
