--- a/views/index.html
+++ b/views/index.html
@@ -228,6 +228,15 @@
         <div class="modal fade" tabindex="-1" role="dialog" id="summerise">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
+                  <div class= "modal-header"> <h5 class="modal-title">So how do we summarise?</h5></div>
+                  <div class= "modal-body"> <p><span style= "font-family: 'Laila', serif;">
+                    After obtaining a recorded conversation , either through a recorded audio file 
+                    or a text file, we use Natual Language processing to obtain a meaningful summary.
+                    We use an algorithm similar to the famed <b><i>PageRank Algorithm</i></b> to along 
+                    with NLP to obtain this result. <br><br>An example of our algoritm can be tested below.
+                    You can either add a text file or an audio file and see the result below. 
+                      </span>
+                    </p></div>
                 <div class="modal-header">
                     <nav>
                         <div class="nav nav-tabs" id="nav-tab" role="tablist">
@@ -260,7 +269,7 @@
                       </div>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn" style= "background: orange" data-dismiss="modal">Close</button>
                 </div>
               </div>
             </div>
