--- a/views/index.html
+++ b/views/index.html
@@ -341,7 +341,7 @@
 
   <!-- Custom scripts for this template -->
   <script src="/views/js/new-age.min.js"></script>
-  <script src="/views/js/custom.js"></script>
+  <script src="/views/js/summary.js"></script>
 
 </body>
 
