--- a/views/index.html
+++ b/views/index.html
@@ -214,9 +214,9 @@
                 bullet points like "To-Do" items to the user.                 
                 </span>
               </p>
-              <form action = "/getContext" method= "GET">
-                <button type="submit" class="btn btn-primary mb-2">Contextualize</button>
-              </form>
+             <div id="context-text">
+               
+             </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn" style= "background: orange" data-dismiss="modal">Close</button>
