--- a/views/index.html
+++ b/views/index.html
@@ -211,7 +211,7 @@
                 After getting a summary, we may further extract important information from the input text.
                 This information may include important meeting dates, scheduled appointments and future
                 commitments. Our algorithm traces key trigger-words from the conversation and gives out 
-                bullet points like "To-Do" items to the user.                 
+                bullet points like "To-Do" items to the user.<br><br> Context from previous text:                 
                 </span>
               </p>
              <div id="context-text">
