--- a/views/index.html
+++ b/views/index.html
@@ -283,6 +283,7 @@
                                 <br/>
                                 <button type="submit" class="btn btn-primary mb-2">Submit</button>
                             </form>
+                            <span style= "font-family: 'Laila', serif;">Summary: </span>
                             <div id="response-div">
                               
                             </div>
